# breaking-attr

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  static_checks.yml  tests.yml
src/: lib.rs
tests/: tests.rs
