[package]
name = "breaking-attr"
description = "An attribute macro that enforces per-version invariants on items."
version = "0.1.3"
edition = "2021"
rust-version = "1.76.0" # `stringify!` changed in this version. Ideally eventually we could hash the AST instead.
homepage = "https://github.com/Waridley/breaking-attr"
repository = "https://github.com/Waridley/breaking-attr"
readme = "README.md"
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"
metadata."docs.rs".all-features = true

[lib]
proc-macro = true

[features]
default = ["blake3"]

[dependencies]
proc-macro2 = "1.0.94"
syn = "2.0.100"

blake3 = { version = "1.6.1", optional = true }
sha2 = { version = "0.10.8", optional = true }
md5 = { version = "0.7.0", optional = true }
base64 = "0.21.7"
